Tests/CompilerTests/negative/invalid-modifer.hylo
//! no-std

static trait P {

  public type X

}

static struct A {

  static typealias Z = A

}

public extension A {

  public static public fun f0() {}

  static public fun f0() {}

}
